--- a/KhoaLuan/.classpath
+++ b/KhoaLuan/.classpath
@@ -33,5 +33,64 @@
 	<classpathentry kind="lib" path="C:/Users/Vien/Desktop/lib JPA/activemq-client-5.16.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vien/Desktop/lib JPA/activemq-pool-5.16.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vien/Desktop/lib JPA/commons-pool2-2.9.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-all-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-anim-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-awt-util-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-bridge-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-codec-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-constants-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-css-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-dom-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-ext-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-extension-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-gui-util-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-gvt-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-i18n-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-parser-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-rasterizer-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-rasterizer-ext-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-script-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-shared-resources-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-slideshow-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-squiggle-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-squiggle-ext-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-svgbrowser-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-svg-dom-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-svggen-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-svgpp-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-svgrasterizer-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-swing-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-transcoder-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-ttf2svg-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-util-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/batik-xml-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/bcpkix-jdk15on-1.68.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/bcprov-jdk15on-1.68.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/commons-io-1.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/curvesapi-1.06.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/fontbox-2.0.22.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/graphics2d-0.30.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/jakarta.activation-api-1.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/jakarta.xml.bind-api-2.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/jcl-over-slf4j-1.7.30.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/pdfbox-2.0.22.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/poi-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/poi-ooxml-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/poi-ooxml-lite-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/serializer-2.7.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/slf4j-api-1.7.30.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/SparseBitSet-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/stax2-api-4.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/woodstox-core-5.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xalan-2.7.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xmlbeans-4.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xmlgraphics-commons-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xmlsec-2.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
