--- a/KhoaLuan/.classpath
+++ b/KhoaLuan/.classpath
@@ -92,5 +92,55 @@
 	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xmlbeans-4.0.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xmlgraphics-commons-2.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/jar_files/xmlsec-2.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/asm-3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-api-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-common-utilities-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-bindings-soap-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-bindings-xml-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-core-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-databinding-jaxb-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-frontend-jaxrs-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-frontend-jaxws-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-frontend-simple-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-transports-common-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-transports-http-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-rt-ws-addr-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/cxf-tools-common-2.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.converter-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.core-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.document.docx-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.document.odt-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.document.tools-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.document-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.remoting.resources.services.client-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.remoting.resources-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.template.freemarker-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.template.velocity-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/fr.opensagres.xdocreport.template-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/freemarker-2.3.20.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/geronimo-javamail_1.4_spec-1.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/jaxb-impl-2.1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/jettison-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/jsr311-api-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/neethi-3.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/spring-aop-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/spring-asm-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/spring-beans-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/spring-context-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/spring-core-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/spring-expression-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/spring-web-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/stax2-api-3.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/stax-api-1.0-2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/velocity-1.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/woodstox-core-asl-4.0.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/wsdl4j-1.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/xml-resolver-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vien/Downloads/fr.opensagres.xdocreport.document.tools-1.0.4-distribution (1)/lib/xmlschema-core-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
